# Michi-Miaomiao-House

./: README.md
compressor_lifetime/: compressor_lifetime_3_1.py  pyproject.toml
tube_lifetime/: ui.txt
tube_lifetime/tubelifetime_react_rev0/: README.md  main.py  pyproject.toml  start_project.bat
tube_lifetime/tubelifetime_react_rev0/backend/: driver.py  engine.py  main.py  requirements.txt
tube_lifetime/tubelifetime_react_rev0/frontend/: index.html  package-lock.json  package.json  vite.config.js
tube_lifetime/tubelifetime_react_rev0/frontend/src/: App.jsx
tube_lifetime/tubelifetime_rev0/: UI desktop.js  auto_1.json  config.py  driver.py  main.py  ui_components.py  ui_flow.py  ui_manual.py  utils.py  worker.py
