[project]
name = "tubelifetime-react-gemini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.7",
    "minimalmodbus>=2.1.1",
    "pylance>=2.0.0",
    "pyserial>=3.5",
    "python-multipart>=0.0.22",
    "uvicorn>=0.40.0",
]

